[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
#Serde / json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3.8"
#axum
axum ="0.7"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10"
lazy-regex = "3.1"
async-trait = "0.1"
strum_macros = "0.26.4"
uuid = {version = "1.9.1", features = ["v4", "fast-rng"]}

[dev-dependencies]
anyhow = "1"
#uses cookie and reqwest store
httpc-test = "0.1.9"